<resources>
    <string name="app_name">Project1</string>
    <string name="carPrice">Car Price :</string>
    <string name="priceHint">500(Example)</string>
    <string name="downPayment">Down Payment :</string>
    <string name="loan">Loan :</string>
    <string name="Interest">Interest rate :</string>
    <string name="loanRate">Example : 5(5 = 5%)</string>
    <string name="submit">Submit</string>
</resources>
